--- a/project_fases/FASE 2 DATA TABLE.ipynb
+++ b/project_fases/FASE 2 DATA TABLE.ipynb
@@ -24,7 +24,10 @@
     "    2.2. Valores de la Lira y el euro en la década 2011-2021(API)\n",
     "    2.3. Índice de democracia (selenium)\n",
     "    \n",
-    "### 3.Fase 2: Limpieza y creación de la base de datos.\n"
+    "### 3.Fase 2: Limpieza y creación de la base de datos.\n",
+    "\n",
+    "\n",
+    "### 4.Fase 3: Plotting and conclussions."
    ]
   },
   {
