--- a/project_fases/FASE 1 DATA MINING.ipynb
+++ b/project_fases/FASE 1 DATA MINING.ipynb
@@ -15,18 +15,19 @@
    "source": [
     "## Índice\n",
     "\n",
-    "### 1.Introducción, hipótesis de trabajo y objetivos.\n",
+    "### 1.Introducción, hipótesis de trabajo y objetivos (en el otro archivo)\n",
     "\n",
-    "### 2.Fase 1: Minería de datos\n",
+    "\n",
+    "### 2.Fase 1: Minería de datos (en el otro archivo)\n",
     "\n",
     "    2.1. IPC español y turco (Selenium)\n",
     "    2.2. Valores de la Lira y el euro en la década 2011-2021(API)\n",
     "    2.3. Índice de democracia (selenium)\n",
     "    \n",
-    "### 3.Fase 2: Limpieza y creación de la base de datos. (En el siguiente archivo)\n",
+    "### 3.Fase 2: Limpieza y creación de la base de datos.\n",
     "\n",
-    "# ---------------------------------------------------------------------------------------------------------------\n",
     "\n",
+    "### 4.Fase 3: Plotting and conclussions.\n",
     "\n",
     "\n",
     "\n",
